[package]
name = "gear"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
axum = "0.6.1"
diesel = { version = "2.0.2", features = ["postgres", "uuid"] }
diesel_migrations = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
tokio = { version = "1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }

[profile.release]
debug = 1
lto = true
