[package]
name = "gear"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
axum = "^0.6"
diesel = { version = "^2.0", features = ["postgres", "uuid"] }
diesel_migrations = "^2.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sha2 = "^0.10"
tokio = { version = "^1.25", features = ["full"] }
uuid = { version = "^1.3", features = ["v4", "serde"] }

[profile.release]
debug = 1
lto = true
